--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rag_negu_expert"]
 	path = rag_negu_expert
 	url = https://github.com/NEGU93/rag-negu-expert
+[submodule "chat_ai"]
+	path = chat_ai
+	url = https://github.com/NEGU93/chat_ai
